# design-pattern

./: LICENSE  README.md
abstract-factory/: AbstractFactory.cpp  CMakeLists.txt  HolzFabrik.cpp  HolzFabrik.h  IFabrik.h  Readme.md  StahlFabrik.cpp  StahlFabrik.h
abstract-factory/Produzent/: Produzent.cpp  Produzent.h
abstract-factory/Tisch/: HolzTisch.cpp  HolzTisch.h  ITisch.h  StahlTisch.cpp  StahlTisch.h
